--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,40 @@ body {
 
 #canvas {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: -1;
+}
+
+body > div {
+    margin: 30px;
+}
+
+h1 {
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+button {
+    padding: 10px;
+    background: none;
+    border: 3px solid white;
+    border-radius: 5px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 90px;
+    margin-right: 10px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+i {
+    color: white;
+    margin: 15px 5px;
 }
