--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,18 @@ button:hover {
 input {
     display: none;
 }
+
+body > div > div:first-child {
+    display: flex;
+}
+
+h2 {
+    color: white;
+    align-self: flex-end;
+    padding-left: 20px;
+    margin-bottom: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 20px;
+}
